--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>8.4.4</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
